<resources>
    <string name="app_name">STC</string>
    <string name="title_home">首页</string>
    <string name="title_mall">商城</string>
    <string name="title_auction">拍卖</string>
    <string name="title_news">消息</string>
    <string name="title_mine">我的</string>
    <string name="sales_confirmation">确认订单</string>
    <string name="address_manager">地址管理</string>
    <string name="address_add">新增地址</string>
    <string name="address_edit">编辑地址</string>
    <string name="commodity_details">商品详情</string>
    <string name="title_activity_login">登录</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="register">注册</string>
    <string name="user_profile">个人信息</string>
    <string name="setting_center">设置中心</string>
    <string name="account_security">账号安全</string>
    <string name="transaction_password">交易密码</string>
    <string name="payment_result">交易结果页</string>
    <string name="set_username">设置用户名</string>
    <string name="activate_phone_number">激活手机号</string>
    <string name="notice_details">预告详情</string>
    <string name="title_notice">预告</string>
    <string name="auction_record">拍卖记录</string>
    <string name="order_record">订单记录</string>
    <string name="order_details">订单详情</string>
    <string name="live_room">直播间</string>
    <string name="lot_introduction">拍卖物详情</string>
    <string name="live_auction">现场拍卖</string>
    <string name="in_the_auction">竞拍中</string>
    <string name="historical_lot">历史拍品</string>

    <!-- Strings related to login -->
    <string name="prompt_email">请输入登录账号</string>
    <string name="prompt_password">请输入登录密码</string>
    <string name="action_sign_in">登陆/注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">无效的账号</string>
    <string name="error_empty_phone">手机号不能为空</string>
    <string name="error_invalid_password">密码不能少于4位</string>
    <string name="error_incorrect_password">账户或密码错误</string>
    <string name="error_field_required">账号不能为空</string>
    <string name="permission_rationale">需要联系人权限</string>
    <string name="forget_password">忘记密码</string>
    <string name="plz_add_address">请添加收货地址</string>
    <string name="tips_badge_removed">红点已经移除</string>
    <string name="next_step">下一步</string>
    <string name="complete">完成</string>

    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="jewelry">珠宝</string>
    <string name="ornaments">摆件</string>
    <string name="free_shipping">包邮</string>
    <string name="home_search_tip">请输入商品名称</string>
    <string name="home_notice_tips1">提前关注，第一时间收到开拍消息</string>
    <string name="home_notice_tips2">预告早知道，你想要的这里都有</string>
    <string name="home_notice_tips3"><![CDATA[GO >>]]></string>
    <string name="gemstone_notice">原石预告</string>
    <string name="high_quality_recommendation">优选推荐</string>
    <string name="gemstone_site">预告主场</string>
    <string name="the_auction_is_active">即将结拍</string>
    <string name="in_auction_title">直播中</string>
    <string name="playback">回放</string>
    <string name="watch_this_space">期待更多</string>
    <string name="auction_title">【拍卖】%1$s</string>
    <string name="auction_notice_title">预告篇</string>
    <string name="new_product_exhibition">新品展示</string>
    <string name="mall_ingenuity_title">匠心好物</string>
    <string name="search_history">历史纪录</string>
    <string name="search_wanna">猜你想搜</string>
    <string name="search">搜索</string>
    <string name="customer">客服</string>
    <string name="collection">收藏</string>
    <string name="buy_now">立即购买</string>
    <string name="mall_switch">切换视图</string>
    <string name="sms_send_code">获取验证码</string>
    <string name="input_phone">输入电话号码</string>
    <string name="input_sms_code">输入验证码</string>
    <string name="all">全部</string>
    <string name="the_price_name">STC</string>
    <string name="close">关闭</string>
    <string name="avatar">头像</string>
    <string name="banner_video">视频</string>
    <string name="banner_image">图片</string>
    <string name="prod_banner_indicators">%1$d / %2$d</string>

    <string-array name="mall_header_topic_title">
        <item>手镯</item>
        <item>摆件</item>
        <item>吊坠</item>
        <item>戒指</item>
        <item>胸牌</item>
        <item>玉石</item>
        <item>耳坠</item>
        <item>更多</item>
    </string-array>

    <string name="price_rmb">约 %1$d RMB</string>
    <string name="sales_volume">销量</string>
    <string name="genuine_security">正品保障</string>
    <string name="text_more">更多</string>
    <string name="number_of_purchase">购买数量</string>
    <string name="increase">增加购买数量</string>
    <string name="decrease">减少购买数量</string>
    <string name="distribution">配送方式：</string>
    <string name="remark">备注: </string>
    <string name="remark_hint">选填~</string>
    <string name="confirm_pay">确定支付</string>
    <string name="total_amount">合计：</string>
    <string name="del">删除</string>
    <string name="edit">编辑</string>
    <string name="save">保存</string>
    <string name="default_address">默认地址</string>
    <string name="add_address">新增地址</string>
    <string name="recipient">收件人</string>
    <string name="recipient_hint">请填写收件人姓名</string>
    <string name="contact_number">联系电话</string>
    <string name="contact_number_hint">请填写联系电话</string>
    <string name="region">所在地区</string>
    <string name="region_hint">请选择</string>
    <string name="details_address">详细地址</string>
    <string name="details_address_hint">请输入详细地址信息，如街道、门牌号等</string>
    <string name="set_default_left">设置为默认地址</string>
    <string name="phone_tips">手机号 |</string>
    <string name="phone_hint">请输入你的手机号码</string>
    <string name="code_tips">验证码 |</string>
    <string name="code_hint">请填写验证码</string>
    <string name="register_name_tips">用户名 |</string>
    <string name="register_name_hint">请输入你的昵称</string>
    <string name="new_password_tips">重设密码 |</string>
    <string name="new_password_hint">请输入6–18位密码</string>
    <string name="confirm_password_tips">确认密码 |</string>
    <string name="confirm_password_hint">请再次输入密码</string>
    <string name="password_hint">密码为大小写字母、数字、符号组成,至少包含两种或以上</string>
    <string name="agreement_left">注册即视为已同意</string>
    <string name="agreement_name">《翡翠交易所协议及声明》</string>
    <string name="trading_message">交易消息</string>
    <string name="notice_message">通知消息</string>
    <string name="no_new_message">暂无消息</string>
    <string name="trading_number">订单编号: %1$s</string>
    <string name="number_of_collection">收藏</string>
    <string name="number_of_attention">关注</string>
    <string name="managed_quantity">托管</string>
    <string name="your_all_order">我的订单</string>
    <string name="activate_now">立即激活</string>
    <string name="activate_tips">为了您的账号安全，请先激活您的手机号</string>
    <string name="follow_notice">关注预告</string>
    <string name="auction_start_time">开拍时间：</string>
    <string name="auction_rules_title">竞拍玩法规则</string>
    <string name="auction_rules_content">点击进入直播间，参与竞拍，根据给定的最低价出价，出价后，请根据提示操作。</string>
    <string name="auction_notice_today">今日开拍预告</string>
    <string name="auction_notice_last">最新发布预告</string>
    <string name="participate">参与</string>
    <string name="deal">成交</string>
    <string name="product_order_record">商品订单</string>
    <string name="auction_order_record">拍卖订单</string>
    <string name="knot_price">结拍价：</string>
    <string name="knot_beat_time">结拍时间：</string>
    <string name="order_all">全部</string>
    <string name="pending_payment">待付款</string>
    <string name="waiting_to_be_shipped">待发货</string>
    <string name="waiting_for_receipt">待收货</string>
    <string name="had_been_delivered">已完成</string>
    <string name="look_at_more_orders">查看更多</string>
    <string name="waiting_for_comments">待评价</string>
    <string name="customer_service">售后</string>
    <string name="wallet">钱包</string>
    <string name="loan">借款</string>
    <string name="customer_service_and_help">客服与帮助</string>
    <string name="setup_center">设置中心</string>
    <string name="bid">出价</string>
    <string name="raise">+</string>
    <string name="bid_range">最低加价50STC</string>
    <string name="comment_hint">一起参与互动吧~</string>
    <string name="last_bid">最高价</string>
    <string name="current_bid">出价</string>
    <string name="send">发送</string>
    <string name="sign_out">退出登录</string>
    <string name="payment_successful">支付成功</string>
    <string name="payment_failed">支付失败</string>
    <string name="auction_result">拍卖结果</string>
    <string name="result_top_tip"><![CDATA[恭喜你<落日余晖>,竞拍成功\n竞拍结束]]></string>
    <string name="the_auction_is_end">本场拍卖已结束</string>
    <string name="to_pay">去支付</string>
    <string name="save_screenshot">保存截图</string>

</resources>
