<?xml version="1.0" encoding="utf-8"?>
<com.dxs.stc.widget.RoundCornerRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:frameRadius="8dp">

    <com.dxs.stc.widget.AutoHeightImageView
        android:id="@+id/iv_auction_cover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/jewelry"
        android:scaleType="centerCrop"
        app:heightWeight="1"
        app:widthWeight="1" />

    <TextView
        android:id="@+id/tv_top_tip"
        android:layout_width="60dp"
        android:layout_height="22dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/auction_red_shape"
        android:ellipsize="end"
        android:gravity="center"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:text="@string/in_auction_title"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_12"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_bottom_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/iv_auction_cover"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:paddingBottom="@dimen/dp_10"
        android:paddingEnd="@dimen/dp_10"
        android:paddingStart="@dimen/dp_6"
        android:text="@string/auction_title"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_14"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_watch_this_space"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_centerInParent="true"
        android:background="@drawable/watch_this_space"
        android:gravity="center"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:text="@string/watch_this_space"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_14"
        android:textStyle="bold"
        android:visibility="gone" />


</com.dxs.stc.widget.RoundCornerRelativeLayout>
