<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/jewelry"
        android:scaleType="centerCrop"
        android:src="@mipmap/home_banner1"
        android:visibility="gone" />

    <com.youth.banner.Banner
        android:id="@+id/home_banner"
        android:layout_width="match_parent"
        app:indicator_drawable_selected="@drawable/indicator_sel"
        app:indicator_drawable_unselected="@drawable/indicator_norm"
        android:layout_height="220dp"
        android:background="@color/navColor" />

    <LinearLayout
        android:id="@+id/ll_notice_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:background="@mipmap/home_notice_bg"
        android:orientation="vertical"
        android:paddingEnd="@dimen/dp_4"
        android:paddingStart="90dp"
        android:paddingTop="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_notice_tips1"
            android:textColor="@color/color_63"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/home_notice_tips2"
            android:textColor="@color/color_66"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:background="@drawable/red_shape"
            android:gravity="center"
            android:text="@string/home_notice_tips3"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />

    </LinearLayout>
</RelativeLayout>