<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ForgetPasswordActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/material_textBlack_dividers"
            android:hint="@string/input_phone"
            android:inputType="phone"
            android:paddingEnd="@dimen/dp_10"
            android:paddingStart="@dimen/dp_10" />

        <EditText
            android:id="@+id/et_code"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/et_phone"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_toStartOf="@+id/btn_send_sms"
            android:background="@color/material_textBlack_dividers"
            android:hint="@string/input_sms_code"
            android:inputType="number"
            android:paddingEnd="@dimen/dp_10"
            android:paddingStart="@dimen/dp_10" />

        <Button
            android:id="@+id/btn_send_sms"
            android:layout_width="96dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/et_phone"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="@dimen/dp_4"
            android:layout_marginTop="4dp"
            android:background="@drawable/tv_sendsms_selector"
            android:gravity="center"
            android:text="@string/sms_send_code"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_sms_submit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/ok" />

</LinearLayout>