<?xml version="1.0" encoding="utf-8"?>
<com.dxs.stc.widget.CustomerDividerPaddingLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:divider="@drawable/divider_line"
    android:showDividers="middle"
    tools:context=".activities.SearchActivity">

    <TextView
        android:id="@+id/fragment_title_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:layout_gravity="center"
        android:background="@color/navColor"
        android:gravity="center"
        android:text="@string/title_news"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18" />

    <com.dxs.stc.widget.VectorCompatTextView
        android:id="@+id/tv_trading_message"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:drawablePadding="@dimen/dp_10"
        android:gravity="center_vertical"
        android:paddingEnd="@dimen/dp_14"
        android:paddingStart="@dimen/dp_14"
        android:text="@string/trading_message"
        android:textColor="@color/color_63"
        android:textSize="@dimen/sp_16"
        app:vectorLeftCompat="@mipmap/ic_mall_bracelet"
        app:vectorRightCompat="@drawable/svg_home_more"/>


    <com.dxs.stc.widget.VectorCompatTextView
        android:id="@+id/tv_notice_message"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:drawablePadding="@dimen/dp_10"
        android:gravity="center_vertical"
        android:paddingEnd="@dimen/dp_14"
        android:paddingStart="@dimen/dp_14"
        android:text="@string/notice_message"
        android:textColor="@color/color_63"
        android:textSize="@dimen/sp_16"
        app:vectorLeftCompat="@mipmap/ic_mall_bracelet"
        app:vectorRightCompat="@drawable/svg_home_more" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/divider_line">

        <TextView
            android:id="@+id/fragment_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_new_message"
            android:textColor="@color/color_63"
            android:textSize="36sp" />
    </FrameLayout>

</com.dxs.stc.widget.CustomerDividerPaddingLinearLayout>