<?xml version="1.0" encoding="utf-8"?>
<com.dxs.stc.widget.RoundCornerRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rc_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/selector_mall_list_bg"
    android:paddingBottom="@dimen/dp_12"
    android:paddingEnd="@dimen/dp_14"
    android:paddingStart="@dimen/dp_14"
    android:paddingTop="@dimen/dp_12">

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:clickable="true"
        android:contentDescription="@string/jewelry"
        android:focusable="true"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_toEndOf="@+id/iv_image"
        android:ellipsize="end"
        android:includeFontPadding="false"
        android:maxLength="20"
        android:maxLines="1"
        android:textColor="@color/color_63"
        android:textSize="@dimen/sp_16"
        tools:text="标题" />

    <TextView
        android:id="@+id/tv_knot_beat_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:layout_margin="@dimen/dp_10"
        android:layout_toEndOf="@+id/iv_image"
        android:textColor="@color/color_69"
        android:textSize="@dimen/sp_12"
        tools:text="@string/knot_beat_time" />

    <TextView
        android:id="@+id/tv_knot_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/iv_image"
        android:layout_margin="@dimen/dp_10"
        android:layout_toEndOf="@+id/iv_image"
        android:gravity="bottom"
        android:includeFontPadding="false"
        android:textColor="@color/color_63"
        android:textSize="@dimen/sp_16"
        tools:text="@string/knot_price" />

</com.dxs.stc.widget.RoundCornerRelativeLayout>